Figures code cleanup

--- a/draw_figures.ipynb
+++ b/draw_figures.ipynb
@@ -224,7 +224,7 @@
     "    for loc, ax, normalizer, title in zip((\"left\", \"right\"), axes, meta[\"normalizer\"], meta[\"title\"]):\n",
     "        seedwise_dists = []\n",
     "        for seed, speaker in product(range(meta[\"num_seeds\"]), meta[\"speakers\"]):\n",
-    "            dists_path = Path(\"/Users/kwangheechoi/Desktop/dev_tables\") / meta[loc].replace(\"spk-x\", f\"spk-{speaker}\").replace(\"seed-x\", f\"seed-{seed}\")\n",
+    "            dists_path = Path(\"tables\") / meta[loc].replace(\"spk-x\", f\"spk-{speaker}\").replace(\"seed-x\", f\"seed-{seed}\")\n",
     "            dists = pickle.load(open(dists_path, \"rb\"))\n",
     "            seedwise_dists.append({\n",
     "                k: [mean_confidence_interval(v)[0] for v in vs]\n",
